tests: Add sonarlint
Signed-off-by: Niklas Sparfeld <niklas.sparfeld@grandcentrix.net>